2009-06-16  Jaroslav Hajek  <highegg@gmail.com>

	* octave_to_python.cc 
	(createPyArr): Don't simplify row vectors to 1D arrays.
	(octvalue_to_pyarrobj): Simplify, don't special-case scalars.
	(octcell_to_pyobject): Remove.
	(octmap_to_pyobject): Simplify, return uniform results.
	(is_1xn_or_0x0): Remove.
	* python_to_octave.cc
	(pydict_to_octmap): Revert to the former behaviour aka Octave's
	`struct'.
	* package/pytave.py (canonicalize): Remove.
	* test/test.py: Update tests.

2009-06-09  Jaroslav Hajek  <highegg@gmail.com>

	* package/pytave.py (canonicalize): New function.
	(feval): Update doc string.

2009-06-08  David Grundberg  <individ@acc.umu.se>

	* pytave.cc (func_eval, str_eval): Reread changed files.

2009-06-08  David Grundberg  <individ@acc.umu.se>

	* test/test.py: New tests for pytave.globals and pytave.locals.
	(testsetget, testexception): Call fail() instead of print.

2009-06-03  Jaroslav Hajek  <highegg@gmail.com>

	* pytave.cc (delvar): New function.
	* package/pytave.py (_VariablesDict.__delitem__): New method.

2009-06-03  Jaroslav Hajek  <highegg@gmail.com>

	* pytave.cc (isvar): Fix tests.

2009-06-08  Jaroslav Hajek  <highegg@gmail.com>, David Grundberg  <individ@acc.umu.se>

	* octave_to_python.cc (copy_octarray_to_pyarrobj<PyObject *,
	Cell>): New template specialization.
	(createPyArr): Simplify row vectors to 1D arrays.
	(octvalue_to_pyarrobj): Add string and cell cases.
	(octcell_to_pyobject): Create a PyObject array if not row vector.
	(octmap_to_pyobject): Create a simple dict if scalar struct.
	(octvalue_to_pyobj): Allow converting arbitrary character matrices.
	* python_to_octave.cc (pydict_to_octmap): Make scalar structs by
	default, detect matching dimensions.
	* package/pytave.py (feval): Update doc string.
	(getvar, setvar, isvar): Remove.
	(_VariablesDict): New class.
	(locals, globals): Default instances.
	(_local_scope): Rename to _LocalScope
	* test/test.py: New tests. Update old tests.